gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/import23873.d
version https://git-lfs.github.com/spec/v1
oid sha256:9e21253871c751b2dda7aec892fb092d9e5bd3249c1ce93667861692ceaf6859
size 24
